--- a/sites/all/themes/thinkcollege_boot/scss/components/_blocks-innoexchange.scss
+++ b/sites/all/themes/thinkcollege_boot/scss/components/_blocks-innoexchange.scss
@@ -26,6 +26,7 @@
 a.divLink {
   width: 100%;
   height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
   text-decoration: none;
